공부 내용 정리

--- a/Java/제어문.md
+++ b/Java/제어문.md
@@ -1,9 +1,41 @@
 # 제어문
 
 ### if
-
+조건문
+```java
+if(x==1) {
+	// 실행할 코드
+}
+```
 ### for
-
+반복문
+```java
+for(int i=0; i<10; i++) {
+	// 코드
+}
+```
 ### while
-
+반복문
+```java
+int i = 0;
+while(i<5){
+	i++;
+}
+```
 ### break
+탈출문
+```java
+for(int i=0; i<5; i++) {
+	if(i==2){
+		break; // i가 2일 때 for문 탈출
+	}
+}
+
+int i = 0;
+while(i<5){
+	if(i==2){
+		break; // i가 2일 때 while문 탈출
+	}
+	i++;
+}
+```
